--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,12 +12,12 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo center">Bake It So!</a>
-      <img id="logo" class="brand-logo" src="images/bake_it_so_logo.svg">
+      <a class="brand-logo center">Bake It So!</a>
+      <a class="brand-logo"><img id="logo" src="images/bake_it_so_logo.svg"></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Cake</a></li>
-        <li><a href="badges.html">Muffins</a></li>
-        <li><a href="collapsible.html">Cookies</a></li>
+        <li><a href="cakes">Cakes</a></li>
+        <li><a href="cake_pops">Cake Pops</a></li>
+        <li><a href="cookies">Cookies</a></li>
       </ul>
     </div>
   </nav>
