--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,19 +1,19 @@
 #logo{
-    width: 10%;
-    height: 10%;
+    width: 70px;
+    height: 70px;
 }
 
 #cake1{
-    width: 30%;
-    height: 25%;
+    width: 500px;
+    height: 400px;
 }
 #cake2{
-    width: 30%;
-    height: 25%;
+    width: 500px;
+    height: 400px;
 }
 #cake3{
-    width: 30%;
-    height: 25%;
+    width: 500px;
+    height: 400px;
 }
 
 #cakepop1{
