--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -1,22 +1,100 @@
     <div class="row">
-
+      <%# --------------Cake 1------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 1 goes here -->
-        <img id=cake1 src="images/battlestar_galactica.jpg">
-        <h4>Sci-Fi themed Cake</h4>
-        <h6>Price: $49.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cake1" class="activator" src="images/battlestar_galactica.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Sci-Fi Cake<i class="material-icons right"></i></span>
+            <h6>Price: $49.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Sci-Fi Cake<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
+      <%# --------------Cake 2------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 2 goes here -->
-        <img id="cake2" src="images/strawberry_cream_cake.jpg">
-        <h4>Strawberry Cream Cake</h4>
-        <h6>Price: $29.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cake2" class="activator" src="images/strawberry_cream_cake.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Strawberry Cream Cake<i class="material-icons right"></i></span>
+            <h6>Price: $29.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Strawberry Cream Cake<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
+      <%# --------------Cake 3------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 3 goes here -->
-        <img id="cake3" src="images/ultimate_choclate_cake.jpg">
-        <h4>Ultimate Choclate Cake</h4>
-        <h6>Price: $29.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cake3" class="activator" src="images/ultimate_choclate_cake.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Ultimate Choclate Cake<i class="material-icons right"></i></span>
+            <h6>Price: $29.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Ultimate Choclate Cake<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# --------------Cake 4------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cake4" class="activator" src="images/Red-Velvet-Cake.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Red Velvet Cake<i class="material-icons right"></i></span>
+            <h6>Price: $39.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Red Velvet Cake<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# --------------Cake 5------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cake5" class="activator" src="images/mango_blast_cake.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Mango Blast Cake<i class="material-icons right"></i></span>
+            <h6>Price: $39.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Mango Blast Cake<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# --------------Cake 6------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cake6" class="activator" src="images/blueberry_layered_pancakes.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Blueberry Layered Pancakes<i class="material-icons right"></i></span>
+            <h6>Price: $39.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Blueberry Layered Pancakes<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
 
     </div>
+
