--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
   <nav>
     <div class="nav-wrapper">
       <a class="brand-logo center">Bake It So!</a>
-      <a class="brand-logo"><img id="logo" src="images/bake_it_so_logo.svg"></a>
+      <a href="/" class="brand-logo"><img id="logo" src="images/bake_it_so_logo.svg"></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="cakes">Cakes</a></li>
         <li><a href="cake_pops">Cake Pops</a></li>
@@ -24,6 +24,6 @@
 
   <%= yield %>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 </body>
 </html>
