--- a/views/cake_pops.erb
+++ b/views/cake_pops.erb
@@ -1,22 +1,99 @@
     <div class="row">
-
+      <%# --------------Cake Pop 1------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 1 goes here -->
-        <img id=cakepop1 src="images/strawberry_cake_pops.jpg">
-        <h4>Strawberry Pop</h4>
-        <h6>Price: $2.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cakepop1" class="activator" src="images/strawberry_cake_pops.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Strawberry Cake Pop<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Strawberry Cake Pop<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
+      <%# -------------Cake Pop 2-------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 2 goes here -->
-        <img id="cakepop2" src="images/red_velvet_cake_pops.jpg">
-        <h4>Red Velvet Pop</h4>
-        <h6>Price: $2.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id=cakepop2 class="activator" src="images/red_velvet_cake_pops.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Red Velvet Cake Pop<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Red Velvet Cake Pop<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
+      <%# -------------Cake Pop 3-------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 3 goes here -->
-        <img id="cakepop3" src="images/blueberry_cake_pops.jpg">
-        <h4>Blueberry Pop</h4>
-        <h6>Price: $2.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id=cakepop2 class="activator" src="images/blueberry_cake_pops.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Blueberry Cake Pop<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Blueberry Cake Pop<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# -------------Cake Pop 4-------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id=cakepop2 class="activator" src="images/rainbow_cake_pops.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Rainbow Cake Pop<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Rainbow Cake Pop<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# -------------Cake Pop 5-------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id=cakepop2 class="activator" src="images/golden_snitch_cake_pops.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Golden Snitch Pop<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Golden Snitch Pop<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# -------------Cake Pop 6-------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id=cakepop2 class="activator" src="images/watermelon_cake_pops.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Watermelon Pop<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Watermelon Pop<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
 
     </div>
