--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -1,17 +1,19 @@
     <div class="row">
-
+      <%# --------------Cookie 1------- %>
       <div class="col s12 m6 l4">
         <!-- Promo Content 1 goes here -->
         <img id=cookie1 src="images/battlestar_galactica.jpg">
         <h4>Cookie 1</h4>
         <h6>Price: $2.99</h6>
       </div>
+      <%# --------------Cookie 2------- %>
       <div class="col s12 m6 l4">
         <!-- Promo Content 2 goes here -->
         <img id="cookie2" src="images/strawberry_cream_cake.jpg">
         <h4>Cookie 2</h4>
         <h6>Price: $2.99</h6>
       </div>
+      <%# --------------Cookie 3------- %>
       <div class="col s12 m6 l4">
         <!-- Promo Content 3 goes here -->
         <img id="cookie3" src="images/ultimate_choclate_cake.jpg">
