--- a/views/cake_pops.erb
+++ b/views/cake_pops.erb
@@ -19,7 +19,7 @@
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img id=cakepop2 class="activator" src="images/red_velvet_cake_pops.jpg">
+            <img id="cakepop2" class="activator" src="images/red_velvet_cake_pops.jpg">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Red Velvet Cake Pop<i class="material-icons right"></i></span>
@@ -35,7 +35,7 @@
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img id=cakepop2 class="activator" src="images/blueberry_cake_pops.jpg">
+            <img id="cakepop3" class="activator" src="images/blueberry_cake_pops.jpg">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Blueberry Cake Pop<i class="material-icons right"></i></span>
@@ -51,7 +51,7 @@
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img id=cakepop2 class="activator" src="images/rainbow_cake_pops.png">
+            <img id="cakepop4" class="activator" src="images/rainbow_cake_pops.png">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Rainbow Cake Pop<i class="material-icons right"></i></span>
@@ -67,7 +67,7 @@
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img id=cakepop2 class="activator" src="images/golden_snitch_cake_pops.jpg">
+            <img id="cakepop5" class="activator" src="images/golden_snitch_cake_pops.jpg">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Golden Snitch Pop<i class="material-icons right"></i></span>
@@ -83,7 +83,7 @@
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img id=cakepop2 class="activator" src="images/watermelon_cake_pops.png">
+            <img id="cakepop6" class="activator" src="images/watermelon_cake_pops.png">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Watermelon Pop<i class="material-icons right"></i></span>
