--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -1,24 +1,99 @@
     <div class="row">
       <%# --------------Cookie 1------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 1 goes here -->
-        <img id=cookie1 src="images/battlestar_galactica.jpg">
-        <h4>Cookie 1</h4>
-        <h6>Price: $2.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cookie1" class="activator" src="images/peanut_butter_cookies.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Peanut Butter<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Peanut Butter<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
       <%# --------------Cookie 2------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 2 goes here -->
-        <img id="cookie2" src="images/strawberry_cream_cake.jpg">
-        <h4>Cookie 2</h4>
-        <h6>Price: $2.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cookie2" class="activator" src="images/oatmeal_cookies.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Oatmeal Raisin<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Oatmeal Raisin<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
       <%# --------------Cookie 3------- %>
       <div class="col s12 m6 l4">
-        <!-- Promo Content 3 goes here -->
-        <img id="cookie3" src="images/ultimate_choclate_cake.jpg">
-        <h4>Cookie 3</h4>
-        <h6>Price: $2.99</h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cookie3" class="activator" src="images/cheesecake_cookie.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Cheescake Cookie<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Cheesecake Cookie<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# --------------Cookie 4------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cookie4" class="activator" src="images/chocolate_chip_cookies.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Chocolate Chip<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Chocolate Chip<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# --------------Cookie 5------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cookie5" class="activator" src="images/white_chocolate_chip_cookie.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">White Chocolate Chip<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">White Chocolate Chip<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <%# --------------Cookie 6------- %>
+      <div class="col s12 m6 l4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img id="cookie6" class="activator" src="images/red_velvet_cookies.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Red Velvet<i class="material-icons right"></i></span>
+            <h6>Price: $2.99</h6>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Red Velvet<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
 
     </div>
