--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,22 @@
-<div id="welcome_message">
-<h1>Welcome to Bake It So!</h1>
-<h1>We take dough and bake it so!</h1>
+<div class="row">
+
+    <div class="col s12 l12 center">
+    <h1>Welcome to Bake It So!</h1>
+    <h1>We take the dough and bake it so!</h1>
+    </div>
+
+</div>
+
+<div class="row">
+
+    <div class="col s12 m6 l4">
+    <img id="frontpage1" src="images/mango_blast_cake.jpg">
+    </div>
+    <div class="col s12 m6 l4">
+    <img id="frontpage2" src="images/golden_snitch_cake_pops.jpg">
+    </div>
+    <div class="col s12 m6 l4">
+    <img id="frontpage3" src="images/red_velvet_cookies.jpg">
+    </div>
+
 </div>
