moved the catalog section to front page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,3 +98,10 @@ nav{
     width: 600px;
     height: 400px;
 }
+
+.form{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
