--- a/views/index.erb
+++ b/views/index.erb
@@ -10,13 +10,24 @@
 <div class="row">
 
     <div class="col s12 m6 l4">
-    <img id="frontpage1" src="images/mango_blast_cake.jpg">
+        <img id="frontpage1" src="images/mango_blast_cake.jpg">
     </div>
     <div class="col s12 m6 l4">
-    <img id="frontpage2" src="images/golden_snitch_cake_pops.jpg">
+        <img id="frontpage2" src="images/golden_snitch_cake_pops.jpg">
     </div>
     <div class="col s12 m6 l4">
-    <img id="frontpage3" src="images/red_velvet_cookies.jpg">
+        <img id="frontpage3" src="images/red_velvet_cookies.jpg">
     </div>
 
+</div>
+
+<div class="row">
+    <div class="form">
+        <form action="/" method="POST">
+        <h4>Recieve Our Catalog</h4>
+        <input type="email" name="email" placeholder="Your email" required>
+
+        <input type="submit" value="send it">
+        </form>
+    </div>
 </div>
