--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -6,12 +6,12 @@
             <img id="cake1" class="activator" src="images/battlestar_galactica.jpg">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Sci-Fi Cake<i class="material-icons right"></i></span>
+            <span class="card-title activator grey-text text-darken-4">Battlestar Galactica Cake<i class="material-icons right"></i></span>
             <h6>Price: $49.99</h6>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Sci-Fi Cake<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <span class="card-title grey-text text-darken-4">Battlestar Galactica Cake<i class="material-icons right">close</i></span>
+            <p>Baked with delciousness! Best cake in the galaxy!</p>
           </div>
         </div>
       </div>
@@ -27,7 +27,7 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Strawberry Cream Cake<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cake in the galaxy!</p>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Ultimate Choclate Cake<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cake in the galaxy!</p>
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Red Velvet Cake<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cake in the galaxy!</p>
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Mango Blast Cake<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness and Mango! Best cake in the galaxy!</p>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Blueberry Layered Pancakes<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cake in the galaxy!</p>
           </div>
         </div>
       </div>
