--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -11,7 +11,8 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Peanut Butter<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cookies in the galaxy!</p>
+            <p>Dozen: $19.99</p>
           </div>
         </div>
       </div>
@@ -27,7 +28,8 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Oatmeal Raisin<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cookies in the galaxy!</p>
+            <p>Dozen: $19.99</p>
           </div>
         </div>
       </div>
@@ -43,7 +45,8 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Cheesecake Cookie<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cookies in the galaxy!</p>
+            <p>Dozen: $19.99</p>
           </div>
         </div>
       </div>
@@ -59,7 +62,8 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Chocolate Chip<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cookies in the galaxy!</p>
+            <p>Dozen: $19.99</p>
           </div>
         </div>
       </div>
@@ -75,7 +79,8 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">White Chocolate Chip<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cookies in the galaxy!</p>
+            <p>Dozen: $19.99</p>
           </div>
         </div>
       </div>
@@ -91,7 +96,8 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Red Velvet<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Baked with delciousness! Best cookies in the galaxy!</p>
+            <p>Dozen: $19.99</p>
           </div>
         </div>
       </div>
