--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,13 @@
   </nav>
 
   <%= yield %>
-
+  <footer class="page-footer">
+          <div class="footer-copyright">
+            <div class="container center">
+            © 2018 Bake it so!
+            </div>
+          </div>
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 </body>
 </html>
